--- a/index.html
+++ b/index.html
@@ -5,54 +5,209 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dahyun Resume</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Nanum+Gothic+Coding&family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
+    <link rel="prefetch stylesheet" href="https://kit-pro.fontawesome.com/releases/v5.12.1/css/pro.min.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 class="offscreen">Dahyun's Website</h1>
-
-    <header class="header">
-
-        <a href="/" class="header-logo">
-            <img src="img/logo.svg" width="" height="">
-        </a>
-
-        <a href="contact.html" class="header-talk">
-            Let's Talk
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="1.2rem">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" />
-            </svg>
-        </a>
-
-        <nav class="header-nav">
-            <h1 class="offscreen">Navigation</h1>
-            <ul class="header-nav-list">
-                <li><a href="/" aria-page="page" class="active">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-
-    </header>
-
-    <section class="hero">
-        <div class="container">
-            <div class="hero-col">
-                <picture class="hero-image">
-                    <source srcset="img/hero-sm.jpg" width="363" height="222" media="(max-width: 400px)" type="image/jpg">
-                    <source srcset="img/hero-md.jpg" width="608" height="372" media="(max-width: 768px)" type="image/jpg">
-                    <img src="img/hero-lg.jpg" width="870" height="532" alt="me working on a computer">
-                </picture>
+<div class="wrapper">
+    <div class="intro">
+        <div class="profile">
+            <div class="photo">
+            <img src="https://i.imgur.com/zh9eNsh.jpg">
             </div>
-            <div class="hero-col">
-                About
+            <div class="bio">
+            <h1 class="name">Dahyun Ko</h1>
+            <p class="profession">Back-end Developer</p>
             </div>
         </div>
-    </section>
+        <div class="intro-section about">
+            <h1 class="title">about me</h1>
+            <p class="paragraph">
+            Hi everyone, I am a web front-end developer, graduated from NTHU, Taiwan and my major is CS. I recently try my
+            best to improve my skills on web front-end. My favorite thing is to observe others' portfolio.
+            </p>
+        </div>
+        <div class="intro-section contact">
+            <h1 class="title">Contact</h1>
+            <div class="info-section">
+                <i class="fas fa-paper-plane"></i>
+                <span>kdhgby@naver.com</span><br>
+                <i class="fas fa-paper-plane"></i>
+                <span>dahyunbless@gmail.com</span>
+            </div>
+        </div>
+        <div class="intro-section follow">
+            <h1 class="title">Follow</h1>
+            <div class="info-section link">
+                <i class="fab fa-github"></i>
+                <a target="_blank" rel="author" href="https://github.com/dahyunko">
+                    <span>dahyunko@github</span>
+                </a>
+            </div>
+            <div class="info-section link">
+                <i class="fab fa-codepen"></i>
+                <a target="_blank" rel="author" href="https://www.notion.so/531c4a6285074ba9b9dccbda1ac2b81a?pvs=4">
+                    <span>dahyun notion</span>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="detail">
+        <div class="detail-section edu">
+            <div class="detail-title">
+            <div class="title-icon">
+                <i class="fas fa-user-graduate"></i>
+            </div>
+            <span>Eduation</span>
+            </div>
+            <div class="detail-content">
+            <div class="timeline-block">
+                <h1>컴퓨터공학과</h1>
+                <p>Sejong University, Korea</p>
+                <time>2021 - present</time>
+            </div>
+            <div class="timeline-block">
+                <h1>Institute of Computer Science and Engineering</h1>
+                <p>National Chiao Tung University, Taiwan</p>
+                <time>2020 - present</time>
+            </div>
+            </div>
+        </div>
+        <div class="detail-section pg-skill">
+            <div class="detail-title">
+            <div class="title-icon">
+                <i class="fas fa-laptop-code"></i>
+            </div>
+            <span>Programming skills</span>
+            </div>
+            <div class="detail-content">
+            <ul class="pg-list">
+                <li>
+                <span>HTML5</span>
+                <div class="sb-skeleton">
+                    <div class="skillbar" style="--pgbar-length: 90%"></div>
+                </div>
+                </li>
+                <li>
+                <span>CSS3</span>
+                <div class="sb-skeleton">
+                    <div class="skillbar" style="--pgbar-length: 75%"></div>
+                </div>
+                </li>
+                <li>
+                <span>Javascript</span>
+                <div class="sb-skeleton">
+                    <div class="skillbar" style="--pgbar-length: 70%"></div>
+                </div>
+                </li>
+                <li>
+                <span>JQuery</span>
+                <div class="sb-skeleton">
+                    <div class="skillbar" style="--pgbar-length: 50%"></div>
+                </div>
+                </li>
+                <li>
+                <span>NodeJS</span>
+                <div class="sb-skeleton">
+                    <div class="skillbar" style="--pgbar-length: 70%"></div>
+                </div>
+                </li>
+                <li>
+                <span>ReactJS</span>
+                <div class="sb-skeleton">
+                    <div class="skillbar" style="--pgbar-length: 75%"></div>
+                </div>
+                </li>
+                <li>
+                <span>VueJS</span>
+                <div class="sb-skeleton">
+                    <div class="skillbar" style="--pgbar-length: 40%"></div>
+                </div>
+                </li>
+            </ul>
+            </div>
+        </div>
+        <div class="detail-section tool-skill">
+            <div class="detail-title">
+            <div class="title-icon">
+                <i class="fas fa-tools"></i>
+            </div>
+            <span>Developement Tools</span>
+            </div>
+            <div class="detail-content">
+            <ul class="tool-list">
+                <li>
+                <svg viewbox="0 0 100 100">
+                    <circle cx="50" cy="50" r="45"></circle>
+                    <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.6"></circle>
+                </svg>
+                <span class="tl-name">Photoshop</span>
+                <span class="tl-exp">60%</span>
+                </li>
+                <li>
+                <svg viewbox="0 0 100 100">
+                    <circle cx="50" cy="50" r="45"></circle>
+                    <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.8"></circle>
+                </svg>
+                <span class="tl-name">Sublime</span>
+                <span class="tl-exp">80%</span>
+                </li>
+                <li>
+                <svg viewbox="0 0 100 100">
+                    <circle cx="50" cy="50" r="45"></circle>
+                    <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.7"></circle>
+                </svg>
+                <span class="tl-name">Git</span>
+                <span class="tl-exp">70%</span>
+                </li>
+                <li>
+                <svg viewbox="0 0 100 100">
+                    <circle cx="50" cy="50" r="45"></circle>
+                    <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.74"></circle>
+                </svg>
+                <span class="tl-name">NPM</span>
+                <span class="tl-exp">74%</span>
+                </li>
+            </ul>
+            </div>
+        </div>
 
-
-
+        <div class="detail-section interests">
+            <div class="detail-title">
+            <div class="title-icon">
+                <i class="fas fa-heart"></i>
+            </div>
+            <span>Interests</span>
+            </div>
+            <div class="detail-content">
+            <div class="outer-frame">
+                <ul class="favor-list">
+                <li>
+                    <i class="fas fa-gamepad"></i>
+                    <span>Game</span>
+                </li>
+                <li>
+                    <i class="fas fa-paw"></i>
+                    <span>Pet</span>
+                </li>
+                <li>
+                    <i class="far fa-headphones-alt"></i>
+                    <span>Music</span>
+                </li>
+                <li>
+                    <i class="fas fa-book-spells"></i>
+                    <span>Self-learning</span>
+                </li>
+                <li>
+                    <i class="fas fa-user-edit"></i>
+                    <span>Blog</span>
+                </li>
+                </ul>
+            </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
