text insert 2/3 done

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         <div class="intro-section about">
             <h1 class="title">about me</h1>
             <p class="paragraph">
-            Hi everyone, I am a web front-end developer, graduated from NTHU, Taiwan and my major is CS. I recently try my
-            best to improve my skills on web front-end. My favorite thing is to observe others' portfolio.
+                사람을 향한 소프트웨어 기술 기반의 안전하고 행복한 세상을 만드는 것이 저의 비전입니다.
             </p>
         </div>
         <div class="intro-section contact">
@@ -43,8 +42,6 @@
                 <a target="_blank" rel="author" href="https://github.com/dahyunko">
                     <span>dahyunko@github</span>
                 </a>
-            </div>
-            <div class="info-section link">
                 <i class="fab fa-codepen"></i>
                 <a target="_blank" rel="author" href="https://www.notion.so/531c4a6285074ba9b9dccbda1ac2b81a?pvs=4">
                     <span>dahyun notion</span>
@@ -61,16 +58,146 @@
             <span>Eduation</span>
             </div>
             <div class="detail-content">
-            <div class="timeline-block">
-                <h1>컴퓨터공학과</h1>
-                <p>Sejong University, Korea</p>
-                <time>2021 - present</time>
+                <div class="timeline-block">
+                    <h1>컴퓨터공학과(19)</h1>
+                    <p>Sejong University, Korea</p>
+                    <time>2021.03 - present</time>
+                </div>
+                <div class="timeline-block">
+                    <h1>Open Year Round — 웹 개발 동아리</h1>
+                    <ul>
+                        <li>대리운전 웹 기반 위치 제공 서비스
+                            <p>: 전화 대리운전 이용시 Geolocation API 이용하여 사용자의 현재 위치를 전송하는 솔루션 </p>
+                            <ul>
+                                <li>대리운전 협회, 오싸 대리운전 회사와의 미팅 진행</li>
+                            </ul>
+                        </li>
+                        <li>수상내역
+                            <ul>
+                                <li>2022 하계 창업 캠프(우수상/ 세종대/ 2022.07.08)</li>
+                                <li>2022-1 학기  창업 아이템 경진대회(우수상/ 세종대/ 2022.06.03)</li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <time>2022.03 - 2022.06</time>
+                </div>
+                <div class="timeline-block">
+                    <h1>(창업진흥원)2022년 혁신창업스쿨 2기 — 2단계 수료</h1>
+                    <ul>
+                        <li>취약 이웃 및 재난 신고 서비스 웹  개발
+                            <p>: 관공서 등의 기관으로 연락시 ARS 또는 상담원이 메세지(url) 전송하여 웹을 통한 간편한 신고</p>
+                            <ul>
+                                <li>취약 이웃 위치 신고: 취약이웃(극빈층, 우울증 환자가족 등)을 인지한 주민들이 현재 위치와 사연 메시지를 쉽게 등록</li>
+                                <li>재난 위험 사진 신고: 이웃 주변의 재난상황(수해, 산불 등)을 인지한 주민들이 사진과 긴급 상황 메시지를 쉽게 등록 </li>
+                            </ul>
+                        </li>
+                        <li>AI 실내 계단 수해 인식 모델 (주)엘핀 협업 진행: 정확도92% 달성</li>
+                    </ul>
+                    <time>2022.09 - 2022.12</time>
+                </div>
             </div>
-            <div class="timeline-block">
-                <h1>Institute of Computer Science and Engineering</h1>
-                <p>National Chiao Tung University, Taiwan</p>
-                <time>2020 - present</time>
+        </div>
+        <div class="detail-section edu">
+            <div class="detail-title">
+            <div class="title-icon">
+                <i class="fas fa-user-graduate"></i>
             </div>
+            <span>Experience</span>
+            </div>
+            <div class="detail-content">
+                <div class="timeline-block">
+                    <h1>터치입력기반 사용자인증 시스템 — 특허 등록</h1>
+                    <ul>
+                        <li>손가락 크기를 활용한 인증 방법(10-2023580-0000)</li>
+                        <li>통화 없이도 간단한 터치를 통해 자신의 위치와 주변 상황 녹음을 하여  자동 전송 서비스</li>
+                    </ul>
+                    <time>2017.06 - 2019.09</time>
+                </div>
+                <div class="timeline-block">
+                    <h1>(주)라이너스</h1>
+                    <ul>
+                        <li>APPB회원 관리 및 사이트 연동 웹</li>
+                        <li>LTI APP 수료증 웹</li>
+                    </ul>
+                    <time>2023.07 - present</time>
+                </div>
+
+                <div class="timeline-block">
+                    <h1>위치 및 이미지 기반 웹 솔루션 — 예비 창업 (대표)</h1>
+                    <ul>
+                        <li>위치 및 이미지 기반 웹 솔루션
+                            <p> Geolocation API와 WebRTC API를 이용하여 사용자의 현재 위치와 상황을 전송하는 솔루션</p>
+                        </li>
+                        <li>협력사를 통한 “취약이웃 및 재난 신고 서비스”  안양시 제안</li>
+                        <li>수상내역
+                            <ul>
+                                <li>2022년 혁신창업스쿨 2기(2단계 수료/ 중소벤처기업부/ 2022/12/05)</li>
+                                <li>2022년 제1회 소프트웨어융합대학 학술제(최우수상/ 세종대/ 2022.12.22)</li>
+                                <li>2022-2학기 창업아이템 경진대회(우수상/ 세종대/ 2022.11.18)</li>
+                                <li>2022-2학기 피칭&멘토링데이(장려상/ 세종대/ 2022.09.21)</li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <time>2022.05 - 2022.12</time>
+                </div>
+            </div>
+        </div>
+        <div class="detail-section edu">
+            <div class="detail-title">
+            <div class="title-icon">
+                <i class="fas fa-user-graduate"></i>
+            </div>
+            <span>Project</span>
+            </div>
+            <div class="detail-content">
+                <div class="timeline-block">
+                    <h1>취약이웃 및 재난 신고 위치 및 이미지 기반 웹 솔루션 — Back-End - Developer</h1>
+                    <p>: 신고자 관공서 전화 시 취약 이웃 위치 신고, 재난 위험 신고를 통해 간편한 신고 서비스 및 들어온 사진 수해 분석 AI 서비스 </p>
+                    <ul>
+                        <li>기획, 화면 설계, 디자인, 스토리보드, WBS
+                            <p>XD 이용 UI/UX 디자인, Excel 이용 기획, 개발, 사업, 학습 일정 WBS 작성 </p>
+                        </li>
+                        <li>SW 아키텍처 설계
+                            <p>: User, Admin, AI 서버, DB, API 간의 소통 구조 설계 </p>
+                        </li>
+                        <li>DB 설계 및 구축(Mysql)</li>
+                        <li>ADMIN(Express)
+                            <ul>
+                                <li>RestAPI 통신 설계 및 구축, CORS연동, WebSocket 통신, 다양한 api 연동, 퍼블리싱 </li>
+                                <li>코드: https://github.com/gooddeLink/admin</li>
+                            </ul>
+                        </li>
+                        <li>AWS 웹 배포
+                            <p>EC2, RDS, SSL 인증/ Putty이용하여 Ubuntu </p>
+                        </li>
+                        <li>AI 계단수해 인식 모델
+                            <p>selenium 이용하여 계단, 계단 침수 데이터 2만개 크롤링 진행</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="timeline-block">
+                    <h1>IT Career Fit : IT 분야별 트렌드 분석 및 개인화 맞춤 일자리 추천 서비스  — Back-End - Developer</h1>
+                    <p>: IT 분야별 트렌드 분석 및 개인화 맞춤 일자리 추천 서비스 </p>
+                    <ul>
+                        <li>기획, 화면 설계, 디자인, 스토리보드 작업
+                            <p>Figma 이용 UI/UX 디자인 </p>
+                        </li>
+                        <li>SW 아키텍처 설계
+                            <p> Springboot, React, Flask, DB, REST API 소통 구조 설계 </p>
+                        </li>
+                        <li>DB 설계 및 구축(Mysql)</li>
+                        <li>서비스 백엔드(Springboot)
+                            <ul>
+                                <li>JPA이용 CRUD 구현, RestAPI 통신 설계 및 구축, CORS 해결</li>
+                                <li>공고 검색 필터링: DB + query+jpa 이용 → 시간 최적화 진행</li>
+                                <li>사용자 가치관 추천 : 기업과 사용자의 5가지의 가치관 지수 계산 알고리즘 </li>
+                                <li>언어 직종 트렌드 분석 : query + jpa</li>
+                                <li>코드: https://github.com/ITcareerfit/BACK</li>
+                            </ul>
+                        </li>
+                        
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="detail-section pg-skill">
