--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="intro">
         <div class="profile">
             <div class="photo">
-            <img src="https://i.imgur.com/zh9eNsh.jpg">
+            <!-- <img src="https://i.imgur.com/zh9eNsh.jpg"> -->
             </div>
             <div class="bio">
             <h1 class="name">Dahyun Ko</h1>
@@ -28,7 +28,7 @@
         </div>
         <div class="intro-section contact">
             <h1 class="title">Contact</h1>
-            <div class="info-section info-section-display">
+            <div class="info-section info-section-display link">
                 <div class="icon-display">
                     <i class="fas fa-paper-plane"></i>
                     <span>kdhgby@naver.com</span>
@@ -37,25 +37,21 @@
                     <i class="fab fa-google"></i>
                     <span>dahyunbless@gmail.com</span>
                 </div>
-            </div>
-        </div>
-        <div class="intro-section follow">
-            <h1 class="title">Follow</h1>
-            <div class="info-section link  info-section-display">
                 <div class="icon-display">
                     <i class="fab fa-github"></i>
                     <a target="_blank" rel="author" href="https://github.com/dahyunko">
-                        <span>dahyunko@github</span>
+                        <span class="make_underline">dahyunko@github</span>
                     </a>
                 </div>
                 <div class="icon-display">
                     <i class="fab fa-codepen"></i>
                     <a target="_blank" rel="author" href="https://www.notion.so/531c4a6285074ba9b9dccbda1ac2b81a?pvs=4">
-                        <span>dahyun notion</span>
+                        <span class="make_underline">dahyun notion</span>
                     </a>
                 </div>
             </div>
         </div>
+        
     </div>
     <div class="detail">
         <div class="detail-section edu">
@@ -102,7 +98,7 @@
                     <time>2022.03 - 2022.06</time>
                 </div>
                 <div class="timeline-block">
-                    <h1>(창업진흥원)2022년 혁신창업스쿨 2기 — 2단계 수료</h1>
+                    <h1>[창업진흥원] 2022년 혁신창업스쿨 2기</h1>
                     <ul>
                         <li>
                             <span class="detail-content-midname">
@@ -129,6 +125,16 @@
                                 <i class="fas fa-square"></i>AI 실내 계단 수해 인식 모델 (주)엘핀 협업 진행: 정확도92% 달성
                             </span>
                         </li>
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>수상내역
+                            </span>
+                            <ul class="detail-content-ul">
+                                <li>
+                                    <span class="detail-content-date">▫ 2022.12.05</span>[창업진흥원] 2022년 혁신창업스쿨 2기 — 2단계 수료
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                     <time>2022.09 - 2022.12</time>
                 </div>
@@ -137,7 +143,7 @@
         <div class="detail-section edu">
             <div class="detail-title">
             <div class="title-icon">
-                <i class="fas fa-user-graduate"></i>
+                <i class="far fa-lightbulb"></i>
             </div>
             <span>Experience</span>
             </div>
@@ -220,14 +226,22 @@
         <div class="detail-section edu">
             <div class="detail-title">
             <div class="title-icon">
-                <i class="fas fa-user-graduate"></i>
+                <i class="fas fa-code"></i>
             </div>
             <span>Project</span>
             </div>
             <div class="detail-content">
                 <div class="timeline-block">
                     <h1>취약이웃 및 재난 신고 위치 및 이미지 기반 웹 솔루션 — Back-End - Developer</h1>
-                    <p>: 신고자 관공서 전화 시 취약 이웃 위치 신고, 재난 위험 신고를 통해 간편한 신고 서비스 및 들어온 사진 수해 분석 AI 서비스 </p>
+                    <ul class="stack-btn">
+                        <li>Node.js</li>
+                        <li>Express</li>
+                        <li>MYSQL</li>
+                        <li>Ubuntu</li>
+                        <li>AWS</li>
+                        <li>js</li>
+                    </ul>
+                    <p>: 신고자 관공서 전화 시 취약 이웃 위치 신고, 재난 위험 신고를 통해 간편한 신고 서비스 및 들어온 사진 수해 분석 AI 서비스 </p>                    
                     <ul>
                         <li>
                             <span class="detail-content-midname non-bold">
@@ -236,25 +250,25 @@
                             <p>: XD 이용 UI/UX 디자인, Excel 이용 기획, 개발, 사업, 학습 일정 WBS 작성 </p>
                         </li>
                         <li>
-                            <span class="detail-content-midname non-bold">
+                            <span class="detail-content-midname">
                                 <i class="fas fa-square"></i>SW 아키텍처 설계
                             </span>
                             <p>: User, Admin, AI 서버, DB, API 간의 소통 구조 설계 </p>
                         </li>
                         <li>
-                            <span class="detail-content-midname non-bold">
+                            <span class="detail-content-midname">
                                 <i class="fas fa-square"></i>DB 설계 및 구축(Mysql)
                             </span>
                             </li>
                         <li>
-                            <span class="detail-content-midname non-bold">
+                            <span class="detail-content-midname">
                                 <i class="fas fa-square"></i>ADMIN(Express)
                             </span>
                             <ul class="detail-content-ul">
                                 <li><span class="detail-content-date">▫ RestAPI 통신 설계 및 구축, CORS연동, WebSocket 통신, 다양한 api 연동, 퍼블리싱 </span></li>
                                 <li>
                                     <span class="detail-content-date">▫ 코드:
-                                    <a target="_blank" rel="author" href="https://github.com/gooddeLink/admin">
+                                    <a target="_blank" rel="author" href="https://github.com/gooddeLink/admin" class="underline-link">
                                         https://github.com/gooddeLink/admin
                                     </a>
                                     </span>
@@ -262,7 +276,7 @@
                             </ul>
                         </li>
                         <li>
-                            <span class="detail-content-midname non-bold">
+                            <span class="detail-content-midname">
                                 <i class="fas fa-square"></i>AWS 웹 배포
                             </span>
                             <p>: EC2, RDS, SSL 인증/ Putty이용하여 Ubuntu </p>
@@ -276,17 +290,36 @@
                     </ul>
                 </div>
                 <div class="timeline-block">
-                    <h1><strong>IT Career Fit</strong> : IT 분야별 트렌드 분석 및 개인화 맞춤 일자리 추천 서비스  — Back-End - Developer</h1>
+                    <h1>IT 분야별 트렌드 분석 및 개인화 맞춤 일자리 추천 서비스  — Back-End - Developer</h1>
+                    <ul class="stack-btn">
+                        <li>Springboot</li>
+                        <li>JAVA</li>
+                        <li>MYSQL</li>
+                        <li>JPA</li>
+                    </ul>
                     <p>: IT 분야별 트렌드 분석 및 개인화 맞춤 일자리 추천 서비스 </p>
                     <ul>
-                        <li><i class="fas fa-square"></i>기획, 화면 설계, 디자인, 스토리보드 작업
+                        <li>
+                            <span class="detail-content-midname non-bold">
+                                <i class="fas fa-square"></i>기획, 화면 설계, 디자인, 스토리보드 작업
+                            </span>
                             <p>: Figma 이용 UI/UX 디자인 </p>
                         </li>
-                        <li><i class="fas fa-square"></i>SW 아키텍처 설계
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>SW 아키텍처 설계
+                            </span>
                             <p>: Springboot, React, Flask, DB, REST API 소통 구조 설계 </p>
                         </li>
-                        <li><i class="fas fa-square"></i>DB 설계 및 구축(Mysql)</li>
-                        <li><i class="fas fa-square"></i>서비스 백엔드(Springboot)
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>DB 설계 및 구축(Mysql)
+                            </span>
+                        </li>
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>서비스 백엔드(Springboot)
+                            </span>
                             <ul class="detail-content-ul">
                                 <li>
                                     <span class="">▫ JPA이용 CRUD 구현, RestAPI 통신 설계 및 구축, CORS 해결</span>
@@ -302,7 +335,7 @@
                                 </li>
                                 <li>
                                     <span class="">▫ 코드:
-                                    <a target="_blank" rel="author" href="https://github.com/gooddeLink/admin">
+                                    <a target="_blank" rel="author" href="https://github.com/gooddeLink/admin" class="underline-link">
                                         https://github.com/ITcareerfit/BACK
                                     </a>
                                     </span>
@@ -328,70 +361,79 @@
                         <li>
                         <span>JavaScript</span>
                         <div class="sb-skeleton">
-                            <div class="skillbar" style="--pgbar-length: 90%"></div>
+                            <div class="skillbar" style="--pgbar-length: 80%"></div>
                         </div>
                         </li>
                         <li>
                         <span>Java</span>
                         <div class="sb-skeleton">
-                            <div class="skillbar" style="--pgbar-length: 90%"></div>
+                            <div class="skillbar" style="--pgbar-length: 70%"></div>
                         </div>
                         </li>
                         <li>
                         <span>C/C++</span>
                         <div class="sb-skeleton">
-                            <div class="skillbar" style="--pgbar-length: 90%"></div>
+                            <div class="skillbar" style="--pgbar-length: 75%"></div>
                         </div>
                         </li>
                         <li>
                         <span>HTML5</span>
                         <div class="sb-skeleton">
-                            <div class="skillbar" style="--pgbar-length: 90%"></div>
+                            <div class="skillbar" style="--pgbar-length: 50%"></div>
                         </div>
                         </li>
                         <li>
                         <span>CSS3</span>
                         <div class="sb-skeleton">
-                            <div class="skillbar" style="--pgbar-length: 75%"></div>
+                            <div class="skillbar" style="--pgbar-length: 45%"></div>
                         </div>
                         </li>
                         <li>
                         <span>ejs</span>
                         <div class="sb-skeleton">
-                            <div class="skillbar" style="--pgbar-length: 75%"></div>
+                            <div class="skillbar" style="--pgbar-length: 65%"></div>
                         </div>
                         </li>
                     </ul>
                 </div>
-                <div class="detail-content-mid">
+                <div class="detail-content-mid margin-cut">
                     <h1>Technologies</h1>
                     <ul class="pg-list"> 
                         <li>
                         <span class="mid-name">Framework</span>
-                        <span class="low-name">Express</span>
-                        <span class="low-name">Springboot</span>
+                        <ul class="stack-btn">
+                            <li>Express</li>
+                            <li>Springboot</li>
+                        </ul>
                         </li>
                         <li>
+                            
                         <span class="mid-name">Database</span>
-                        <span class="low-name">MYSQL</span>
-                        <span class="low-name">MSSQL</span>
+                        <ul class="stack-btn">
+                            <li>MYSQL</li>
+                            <li>MSSQL</li>
+                        </ul>
                         </li>
                     </ul>
                 </div>
-                <div class="detail-content-mid">
+                <div class="detail-content-mid margin-cut">
                     <h1>Tools & Softwares</h1>
                     <ul class="pg-list"> 
                         <li>
                         <span class="mid-name">Coder related</span>
-                        <span class="low-name">Node.js</span>
-                        <span class="low-name">STS 4</span>
-                        <span class="low-name">VS Code</span>
-                        <span class="low-name">Visual Studio</span>
+                        <ul class="stack-btn">
+                            <li>Node.js</li>
+                            <li>STS 4</li>
+                            <li>VS Code</li>
+                            <li>Visual Studio</li>
+                        </ul>
                         </li>
                         <li>
                         <span class="mid-name">Developement Tools</span>
-                        <span class="low-name">GitHub</span>
-                        <span class="low-name">AWS</span>
+                        <ul class="stack-btn">
+                            <li>GitHub</li>
+                            <li>AWS</li>
+                        </ul>
                         </li>
                     </ul>
                 </div>
