--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         </li>
                         <li>
                             <span class="detail-content-midname">
-                                <i class="fas fa-square"></i>수상내역
+                                🏆 수상내역
                             </span>
                             <ul class="detail-content-ul">
                                 <li>
@@ -127,7 +127,7 @@
                         </li>
                         <li>
                             <span class="detail-content-midname">
-                                <i class="fas fa-square"></i>수상내역
+                                🏆 수상내역
                             </span>
                             <ul class="detail-content-ul">
                                 <li>
@@ -197,7 +197,7 @@
                         </li>
                         <li>
                             <span class="detail-content-midname">
-                                <i class="fas fa-square"></i>수상내역
+                                🏆 수상내역
                             </span>
                             <ul class="detail-content-ul">
                                 <li>
