--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
                                 <i class="fas fa-square"></i>취약 이웃 및 재난 신고 서비스 웹  개발
                             </span>
                             <p>: 관공서 등의 기관으로 연락시 ARS 또는 상담원이 메세지(url) 전송하여 웹을 통한 간편한 신고</p>
+                            
+                            <span class="detail-content-midname non-bold">
+                                <span class="style-bold">
+                                    <i class="fas fa-square"></i>서비스 설명:
+                                </span>
+                                <a target="_blank" rel="author" href="https://github.com/gooddeLink/user" class="underline-link">
+                                    https://github.com/gooddeLink/user
+                                </a>
+                            </span>
                             <ul class="detail-content-ul">
                                 <li>
                                     <p>
