--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="prefetch stylesheet" href="https://kit-pro.fontawesome.com/releases/v5.12.1/css/pro.min.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
+
 <body>
 <div class="wrapper">
     <div class="intro">
@@ -174,10 +175,11 @@
                                 <i class="fas fa-square"></i>기획, 화면 설계, 디자인, 스토리보드, WBS 작업 진행
                                 <ul class="detail-content-ul">
                                     <li>
-                                        <span class="style-bold">▫ WBS 도식 화면 : </span>
+                                        <span class="style-bold">▫ WBS 도식 화면 자세히 보기: </span>
                                         <a target="_blank" rel="author" href="https://github.com/gooddeLink/admin/tree/main#wbs-" class="underline-link" title="서비스 화면 및 설명">
                                             https://github.com/gooddeLink/admin/tree/main#wbs-
                                         </a>
+                                        <img src="https://user-images.githubusercontent.com/101400650/267573451-16454258-8e70-4b52-a47a-3eb00a870668.png" style="width: 650px; ">
                                     </li>
                                 </ul>
                             </span>
@@ -307,6 +309,7 @@
                                         https://github.com/gooddeLink/admin/tree/main#using-stacks-
                                     </a>
                                     </span>
+                                    <img src="https://user-images.githubusercontent.com/101400650/264209552-4f973600-b175-4e98-a172-4484fac07791.png" style="width: 500px;">
                                 </li>
                             </ul>
                         </li>
@@ -378,6 +381,7 @@
                                         https://github.com/ITcareerfit/BACK#using-stacks-
                                     </a>
                                     </span>
+                                    <img src="https://user-images.githubusercontent.com/101400650/264209552-4f973600-b175-4e98-a172-4484fac07791.png" alt="" style="width: 500px;">
                                 </li>
                             </ul>
                         </li>
@@ -564,7 +568,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </div>
-
 </body>
 </html>
