--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                                         https://github.com/gooddeLink/admin/tree/main#using-stacks-
                                     </a>
                                     </span>
-                                    <img src="https://user-images.githubusercontent.com/101400650/264209552-4f973600-b175-4e98-a172-4484fac07791.png" style="width: 500px;">
+                                    <!-- <img src="https://user-images.githubusercontent.com/101400650/264209552-4f973600-b175-4e98-a172-4484fac07791.png" style="width: 500px;"> -->
                                 </li>
                             </ul>
                         </li>
@@ -381,7 +381,7 @@
                                         https://github.com/ITcareerfit/BACK#using-stacks-
                                     </a>
                                     </span>
-                                    <img src="https://user-images.githubusercontent.com/101400650/264209552-4f973600-b175-4e98-a172-4484fac07791.png" alt="" style="width: 500px;">
+                                    <!-- <img src="https://user-images.githubusercontent.com/101400650/264209552-4f973600-b175-4e98-a172-4484fac07791.png" alt="" style="width: 500px;"> -->
                                 </li>
                             </ul>
                         </li>
