--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <div class="info-section info-section-display link">
                 <div class="icon-display">
                     <i class="fas fa-paper-plane"></i>
-                    <span>kdhgby@naver.com</span>
+                    <span class="make_underline">kdhgby@naver.com</span>
                 </div>
                 <div class="icon-display">
                     <i class="fab fa-google"></i>
-                    <span>dahyunbless@gmail.com</span>
+                    <span class="make_underline">dahyunbless@gmail.com</span>
                 </div>
                 <div class="icon-display">
                     <i class="fab fa-github"></i>
