--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="bio">
             <h1 class="name">Dahyun Ko</h1>
-            <p class="profession">Back-end Developer</p>
+            <p class="profession">Backend Developer</p>
             </div>
         </div>
         <div class="intro-section about">
@@ -125,7 +125,91 @@
             <div class="detail-content">
                 <a name="loc-and-image-develope"></a>
                 <div class="timeline-block">
-                    <h1>IT 분야별 트렌드 분석 및 개인화 맞춤 일자리 추천 서비스  — Back-End - Developer</h1>
+                    <h1>국내 여행지 AI 맞춤 추천 웹 서비스 — Front & BackEnd</h1>
+                    <ul class="stack-btn">
+                        <li>JSP</li>
+                        <li>JAVA</li>
+                        <li>MYSQL</li>
+                        <li>vanila js</li>
+                        <li>Servlet</li>
+                    </ul>
+                    <p>: 공공데이터, Kakao Map, Google Gemini AI API를 활용한 국내 여행지 및 개인화 맟춤 코스 추천 웹 서비스 </p>
+                    <!-- <p>: 2023 상반기 IT 분야별 <span class="hilight underline">트렌드 분석</span> 및 <span class="hilight underline">개인화 맞춤 일자리 추천</span> 서비스 </p> -->
+                    <ul class="make_interval">
+                        <!-- <li>
+                            <span class="detail-content-midname non-bold">
+                                <i class="fas fa-square"></i>기획, 화면 설계, 디자인, 스토리보드 작업 : Figma 이용 UI/UX 디자인
+                            </span>
+                        </li> -->
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>
+                                <a target="_blank" rel="author" href="https://github.com/gooddeLink/admin/blob/main/README.md#using-stacks-" class="underline-link" title="아키텍처 도식 보기">
+                                    아키텍처 설계
+                                </a>
+                            </span>
+                            : vanila js - JSP, Servlet - Database 및 Github CI 구성
+                            <!-- <ul class="detail-content-ul">
+                                <li><span class="detail-content-date">▫ 아키텍처 도식: 
+                                    <a target="_blank" rel="author" href="https://github.com/gooddeLink/admin/blob/main/README.md#using-stacks-" class="underline-link" title="서비스 화면 및 설명">
+                                        https://github.com/ITcareerfit/BACK#using-stacks-
+                                    </a>
+                                    </span>
+                                    <img src="https://user-images.githubusercontent.com/101400650/264209552-4f973600-b175-4e98-a172-4484fac07791.png" alt="" style="width: 500px;">
+                                </li>
+                            </ul> -->
+                        </li>
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>개발 기간 및 인원
+                            </span>
+                            <span> : 진행 중 / 2인</span>
+                        </li>
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>Mysql DB 설계 및 구축/ REST API 설계
+                            </span>
+                        </li>
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>서비스 개발 내역
+                            </span>
+                            <ul class="detail-content-ul">
+                                <li>
+                                    <span class="">▫ Servlet 구현을 통한 MVC 패턴 적용 + JSP + MYSQL 적용</span>
+                                </li>
+                                <li>
+                                    <span class="style-bold">▫ Gemini AI를 활용한 사용자 맞춤 여행지 코스 추천</span> 
+                                    <p style="padding-left: 15px;">
+                                        : 고객의 성별, 일정, 인원 수, 이동 방법 등의 니즈 정보 + Gemini API promt + Kakao Map API
+                                        <br/>
+                                        * 추후 chat 기능 추가 고도화 예정
+                                    </p>
+                                </li>
+                                <li>
+                                    <span class="style-bold">▫ 국내 지역별 장소 검색 기능</span> 
+                                    <p style="padding-left: 15px;">
+                                        : 공공 데이터 API 지역 정보 활용하여 장소 정보 및 지도 제공
+                                    </p>
+                                </li>
+                                <li>
+                                    <span class="style-bold">▫ Session 활용 사용자 정보 관리</span> 
+        
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <span class="detail-content-midname non-bold">
+                                <!-- <i class="fas fa-square"></i> -->
+                                <a target="_blank" rel="author" href="https://github.com/dahyunko/RecommandTripWithGemini" class="underline-link" title="프로젝트 자세한 설명" >
+                                    .. See more Go to GitHub RecommandTripWithGemini
+                                </a>
+                        </span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="timeline-block">
+                    <h1>IT 분야별 트렌드 분석 및 개인화 맞춤 일자리 추천 서비스  — Back-End</h1>
                     <ul class="stack-btn">
                         <li>Springboot</li>
                         <li>JAVA</li>
@@ -157,6 +241,12 @@
                                     <img src="https://user-images.githubusercontent.com/101400650/264209552-4f973600-b175-4e98-a172-4484fac07791.png" alt="" style="width: 500px;">
                                 </li>
                             </ul> -->
+                        </li>
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>개발 기간 및 인원
+                            </span>
+                            <span> : 4개월 / 4인</span>
                         </li>
                         <li>
                             <span class="detail-content-midname">
@@ -199,7 +289,7 @@
                     </ul>
                 </div>
                 <div class="timeline-block">
-                    <h1>취약이웃 및 재난 신고 위치 및 이미지 기반 웹 솔루션 — Back-End - Developer</h1>
+                    <h1>취약이웃 및 재난 신고 위치 및 이미지 기반 웹 솔루션 — BackEnd</h1>
                     <ul class="stack-btn">
                         <li>Node.js</li>
                         <li>Express</li>
@@ -228,6 +318,12 @@
                                     <img src="https://user-images.githubusercontent.com/101400650/264209552-4f973600-b175-4e98-a172-4484fac07791.png" style="width: 500px;">
                                 </li>
                             </ul> -->
+                        </li>
+                        <li>
+                            <span class="detail-content-midname">
+                                <i class="fas fa-square"></i>개발 기간 및 인원
+                            </span>
+                            <span> : 8개월 / 3인</span>
                         </li>
                         <li>
                             <span class="detail-content-midname">
@@ -489,13 +585,21 @@
             <div class="detail-content">
                 <div class="timeline-block">
                     <h1>SSAFY(11기)</h1>
-                    <p>: Java Interface 이해를 통한 Singleton 패턴에 대하여 학습하고 있습니다. </p>
+                    <p>: Java JSP 프로젝트와 CS 스터디 진행 중에 있습니다. </p>
+                    <li>
+                        <span class="detail-content-midname">
+                            <a target="_blank" rel="author" href="https://github.com/dahyunko/RecommandTripWithGemini" class="underline-link" title="스터디 자세한 설명" >
+                                <i class="fas fa-square"></i> 국내 여행지 AI 맞춤 추천 웹 서비스
+                            </a>
+                        </span>
+                    </li>
                     <li>
                         <span class="detail-content-midname">
                             <a target="_blank" rel="author" href="https://github.com/SSAFY-CSStudy/OS" class="underline-link" title="스터디 자세한 설명" >
-                                <i class="fas fa-square"></i> CS_Study(OS, Network) 진행
+                                <i class="fas fa-square"></i> CS_Study(OS, Network)
                             </a>
                         </span>
+                        <span> : 우수 스터디 선정</span>
                     </li>
                     <time>2024.01 - present</time>
                 </div>
@@ -509,13 +613,20 @@
                     <p>: Next.js, Springboot 학습 및 Market Place 서비스 프로젝트 개발 </p>
                         <li>
                             <span class="detail-content-midname">
-                                <i class="fas fa-square"></i>Market Place 서비스
+                                <a target="_blank" title="let's see code" rel="author" href="https://github.com/ASAC-marketplace/backend" class="underline-link">
+                                    <i class="fas fa-square"></i>Market Place 서비스
+                                </a>
                             </span>
                             <!-- <p>Springboot와 Mysql을 사용한 프로젝트</p> -->
                             <ul class="detail-content-ul">
                                 <li>
                                     <span class="">▫ SpringBoot, PostgreSQL 백엔드 개발
                                     </span>
+                                </li>
+                                <li>
+                                    <a target="_blank" title="let's see code" rel="author" href="https://github.com/ASAC-marketplace/backend" class="underline-link">
+                                        ▫ marketplace-GitHub 
+                                    </a>
                                 </li>
                             </ul>
                         </li>    
